@@ -507,9 +507,6 @@ function feed_viewscreen_widgets(vs_name, vs, keys)
         return false
     end
     gui.markMouseClicksHandled(keys)
-    if keys._MOUSE_L_DOWN then
-        df.global.enabler.mouse_lbut = 0
-    end
     return true
 end
 
